# PotatoAlert

Updater/: CMakeLists.txt
Updater/include/Updater/: ModernUpdater.hpp  Updater.hpp  UpdaterFactory.hpp
Updater/include/Updater/Core/: ErrorHandler.hpp  UpdateOrchestrator.hpp  UpdateStateMachine.hpp
Updater/include/Updater/Interfaces/: IBackupManager.hpp  IDownloader.hpp  IFileManager.hpp  IPlatformManager.hpp  IProcessManager.hpp  IProgressReporter.hpp  IUpdateVerifier.hpp
Updater/include/Updater/Models/: BackupConfiguration.hpp  DownloadProgress.hpp  ProgressInfo.hpp  UpdateConfiguration.hpp  UpdateError.hpp  UpdateInfo.hpp  UpdateResult.hpp
Updater/include/Updater/Platform/: Win32ProcessManager.hpp
Updater/include/Updater/Platform/linux/: LinuxPlatformManager.hpp  LinuxProcessManager.hpp
Updater/include/Updater/Platform/win32/: Win32PlatformManager.hpp  Win32ProcessManager.hpp
Updater/include/Updater/Services/: BackupManager.hpp  CryptoVerifier.hpp  FileManager.hpp  GitHubDownloader.hpp  ProgressReporter.hpp
Updater/src/: ModernUpdater.cpp  Updater.cpp  UpdaterFactory.cpp
Updater/src/Core/: ErrorHandler.cpp  UpdateOrchestrator.cpp  UpdateStateMachine.cpp
Updater/src/Platform/: Win32ProcessManager.cpp
Updater/src/Platform/linux/: LinuxPlatformManager.cpp  LinuxProcessManager.cpp
Updater/src/Platform/win32/: Win32PlatformManager.cpp
Updater/src/Services/: BackupManager.cpp  CryptoVerifier.cpp  FileManager.cpp  GitHubDownloader.cpp  ProgressReporter.cpp
